[project]
name = "flet-box"
version = "0.0.1"
description = "Flet-Box is a package created as a Flet add-on, designed to be Box to use with a cleaner order in the code, having many customizable features."
authors = [
    {name = "javier53348", email = "javier53348@gmail.com"},
]

dependencies = [
    "parse",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "apache-2.0"}
keywords = ["flet Box", "flet", "python", "flet router"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/javier53348"
Repository = "https://github.com/xavier53348/Flet-Box"
Documentation = "https://github.com/xavier53348/Flet-Box/blob/main/README.md"
Changelog = "https://github.com/xavier53348/Flet-Box/blob/main/README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "flet>=0.21.1",
]
