[build-system]
requires = ["flet"]  # REQUIRED if [build-system] table is used

[project]
name = "flet-box-gui"
version = "0.1.1"
description = "Flet-Box it's a GUI Dragg dropp BUILDER."
readme = { file="README.md" , content-type= 'text/markdown'}
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["flet-Box", "flet",'flet-gui','flet-builder','flet-sdk']

dependencies    = [
                    "flet"
                ]

authors         = [
                    {name = "xavier53348", email = "xavier53348@gmail.com"},
                ]
maintainers     = [
                    {name = "xavier53348", email = "xavier53348@gmail.com" }
                ]
classifiers = [
              # How mature is this project? Common values are
              #   3 - Alpha
              #   4 - Beta
              #   5 - Production/Stable

              "Development Status :: 3 - Alpha",

              # Indicate who your project is intended for
              "Intended Audience :: Developers",
              "Topic :: Software Development :: Build Tools",

              # Pick your license as you wish
              "License :: OSI Approved :: apache-2.0",

              # Specify the Python versions you support here. In particular, ensure
              # that you indicate you support Python 3. These classifiers are *not*
              # checked by "pip install". See instead "requires-python" key in this file.
              "Programming Language :: Python :: 3",
              "Programming Language :: Python :: 3.8",
              "Programming Language :: Python :: 3.9",
              "Programming Language :: Python :: 3.10",
              "Programming Language :: Python :: 3.11",
              "Programming Language :: Python :: 3.12",
              "Programming Language :: Python :: 3 :: Only",
            ]


[project.scripts]
flet-box = 'flet-box:main'

[project.urls]
"Homepage"      = "https://github.com/xavier53348"
"Repository"    = "https://github.com/xavier53348/Flet-Box.git"
"Source"        = "https://github.com/xavier53348/Flet-Box/flet_box"
"Documentation" = "https://github.com/xavier53348/Flet-Box/blob/main/README.md"

# "Changelog"     = "https://github.com/xavier53348/Flet-Box/blob/main/README.md"
# "Bug Reports" = "https://xavier53348/Flet-Box/issues"
# "Funding"     = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"
# "Source"      = "https://github.com/pypa/sampleproject/"
