[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gastronomic_services"
authors = [
    {name = "Javier Qwesada Reyes", email = "kuko53348@gmail.com"}
]
description = "Gastronomic services"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # "requests > 2.26.0",
    # "pandas"
]